small code tidy